--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
  <body>
 <h1>My first sentence</h1>
-   	<p>Why is GitHub so slow?</p>
+  <p>Why is <u>GitHub</u> so <b>slow?</b></p>
  </body>
 </html>
 
