--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
  <body>
 <h1>My first sentence</h1>
   <p>Why is <u>GitHub</u> so <b>slow?</b></p>
+  <p><a href= "https://www.bettycrocker.com/recipes/ultimate-chocolate-chip-cookies/77c14e03-d8b0-4844-846d-f19304f61c57">How to bake chocolate chip cookies</a></p>
  </body>
 </html>
 
