--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
  <body>
 <h1>My first sentence</h1>
   <p>Why is <u>GitHub</u> so <b>slow?</b></p>
-  <p><a href= "https://www.bettycrocker.com/recipes/ultimate-chocolate-chip-cookies/77c14e03-d8b0-4844-846d-f19304f61c57">How to bake chocolate chip cookies</a></p>
+  <p><a href= "https://www.bettycrocker.com/recipes/ultimate-chocolate-chip-cookies/77c14e03-d8b0-4844-846d-f19304f61c57">How to bake chocolate chip cookies!</a></p>
+ <p><img src="https://media.tenor.com/NFy4TVG3DUcAAAAd/among-us-sus.gif" alt="The Among us crewmate is doing the default dance" style="width:200px;height:200px;"></p>
+
  </body>
 </html>
 
