Changed heading and first sentences with color

--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
  <body>
-<h1>My first sentence</h1>
-  <p>Why is <u>GitHub</u> so <b>slow?</b></p>
+<h1>Random bits and parts.</h1>
+  <p>Welcome to my <u>first ever</u><b>GITHUB</b> project! <font color="green">I hope you enjoy!</font>
+</p>
   <p><a href= "https://www.bettycrocker.com/recipes/ultimate-chocolate-chip-cookies/77c14e03-d8b0-4844-846d-f19304f61c57">How to bake chocolate chip cookies!</a></p>
  <p><img src="https://media.tenor.com/NFy4TVG3DUcAAAAd/among-us-sus.gif" alt="The Among us crewmate is doing the default dance" style="width:200px;height:200px;"></p>
   <p><iframe width="560" height="315" src="https://www.youtube.com/embed/G-T3qKl6y-c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></p>
