Changed background color

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
- <body>
+ <body bgcolor = "782f45">
 <h1>Random bits and parts.</h1>
-  <p>Welcome to my <u>first ever</u><b>GITHUB</b> project! <font color="green">I hope you enjoy!</font>
+  <p>Welcome to my <u>first ever</u> <b>GITHUB</b> project! <font color="green">I hope you enjoy!</font>
 </p>
   <p><a href= "https://www.bettycrocker.com/recipes/ultimate-chocolate-chip-cookies/77c14e03-d8b0-4844-846d-f19304f61c57">How to bake chocolate chip cookies!</a></p>
  <p><img src="https://media.tenor.com/NFy4TVG3DUcAAAAd/among-us-sus.gif" alt="The Among us crewmate is doing the default dance" style="width:200px;height:200px;"></p>
