--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
   <p><a href= "https://www.bettycrocker.com/recipes/ultimate-chocolate-chip-cookies/77c14e03-d8b0-4844-846d-f19304f61c57">How to bake chocolate chip cookies!</a></p>
  <p><img src="https://media.tenor.com/NFy4TVG3DUcAAAAd/among-us-sus.gif" alt="The Among us crewmate is doing the default dance" style="width:200px;height:200px;"></p>
   <p><iframe width="560" height="315" src="https://www.youtube.com/embed/G-T3qKl6y-c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></p>
+  <p><button>Click this for 97 bobux.</button></p>
+  <h2>Good cookie brands to try:</h2>
+  <ol>
+  <li>Chips Ahoy</li>
+  <li>Oreos</li>
+  <li>Nutter Butter</li>
+   <li>Famous Amos</li>
+   <li>Keebler</li>
+</ol>
+
  </body>
 </html>
 
